--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -193,7 +193,7 @@
     dialog_title    = {intl l="Delete keyword group" d='keyword'}
     dialog_message  = {intl l="Do you really want to delete this keyword group and all its associations ?" d='keyword'}
 
-    form_action         = {url path='/admin/module/Keyword/group/delete'}
+    form_action         = {token_url path='/admin/module/Keyword/group/delete'}
     form_content        = {$smarty.capture.keyword_group_delete_dialog nofilter}
 }
 
